--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "high-stakes-app",
   "private": true,
@@ -15,7 +16,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
-    "stripe": "^17.0.0"
+    "stripe": "^17.0.0",
+    "lucide-react": "^0.475.0"
   },
   "devDependencies": {
     "@netlify/functions": "^2.0.0",
