--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
     "framer-motion": "^10.18.0",
+    "lucide-react": "^0.475.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
-    "stripe": "^17.0.0",
-    "lucide-react": "^0.475.0"
+    "stripe": "^17.0.0"
   },
   "devDependencies": {
     "@netlify/functions": "^2.0.0",
