--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "high-stakes-app",
   "private": true,
@@ -17,7 +16,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
-    "stripe": "^17.0.0"
+    "stripe": "^17.0.0",
+    "@google/genai": "^0.0.13"
   },
   "devDependencies": {
     "@netlify/functions": "^2.0.0",
