--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
     "framer-motion": "^10.18.0",
@@ -16,8 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
-    "stripe": "^17.0.0",
-    "@google/genai": "^0.0.13"
+    "stripe": "^17.0.0"
   },
   "devDependencies": {
     "@netlify/functions": "^2.0.0",
