--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "high-stakes-app",
   "private": true,
@@ -9,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.21.0",
+    "@google/genai": "^1.41.0",
     "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
     "framer-motion": "^10.18.0",
